<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Forlim Popoli</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">@string/app_name</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_order_status">Orders</string>
    <string name="menu_invoice">Invoice</string>
    <string name="menu_invoice2">Order/Invoice</string>
    <string name="menu_sale_return_details">Sale Return</string>
    <string name="menu_payment">Payment Details</string>
    <string name="menu_sampling_data">Fabric Samples</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_exit">Exit</string>
    <string name="payment_details">Payment Details</string>
    <string name="no_internet">You\'re offline.\nCheck Internet Connection.</string>
    <string name="no_record_found">No Result Found. \n Try a more general keyword.</string>
    <string name="data_not_found">Data Not Found.</string>
    <string name="image_not_found">Image Not Available</string>
    <string name="save">Save</string>
    <string name="name">Name*</string>
    <string name="button_continue">Continue</string>
    <string name="share">share</string>
    <string name="credit_days">Credit</string>
    <string name="Rs">\u20B9</string>
    <string name="login">Login</string>
    <string name="enter_your_mobile_no">Enter your mobile no.</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="login_">login</string>
    <string name="still_not_connected_register">Still not connected? Create an Account</string>
    <string name="searchhere">Search Here</string>
    <string name="article_no">Article No. :</string>
    <string name="article_name">Article Name :</string>
    <string name="quantity_in_meter">Quantity in Meter :</string>
    <string name="price">Price :</string>
    <string name="view_image">View Image</string>
    <string name="add">Add</string>
    <string name="place_order">Proceed to Buy</string>
    <string name="subtotal">Subtotal</string>
    <string name="_3400">₹3400</string>
    <string name="rs_398">Rs. 398</string>
    <string name="mtr">Mtr. Qty</string>
    <string name="total">Total</string>
    <string name="rs_899">Rs.899</string>
    <string name="remove">Delete</string>
    <string name="billing_details">Billing Details</string>
    <string name="billing_address">Billing Address</string>
    <string name="customer_type">Customer Type :</string>
    <string name="city">City :</string>
    <string name="state">State :</string>
    <string name="country">Country :</string>
    <string name="delivery_confirmed">Confirm Delivery</string>
    <string name="add_delivery_address_details">Add a new Address</string>
    <string name="mobile_no">Mobile No. :</string>
    <string name="delivery_address">Delivery Address :</string>
    <string name="city_name">City Name :</string>
    <string name="state_name">State Name :</string>
    <string name="country_name">Country Name :</string>
    <string name="pincode">Pincode</string>
    <string name="add_delivery_details">Add Delivery Details</string>
    <string name="edit_delivery_address_details">Edit Delivery Address Details</string>
    <string name="customer_details">Customer Details</string>
    <string name="customer_name">Customer Name</string>
    <string name="contact_person">Contact Person Name*</string>
    <string name="telephone_no_1">Telephone 1</string>
    <string name="telephone_no_2">Telephone 2</string>
    <string name="whatsapp_no">Whatsapp No</string>
    <string name="website">Website</string>
    <string name="pan">PAN</string>
    <string name="bank_details">Bank Details</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_name">Account Holder Name</string>
    <string name="account_no">Account No</string>
    <string name="branch_name">Branch Name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="gst_no">GST Number</string>
    <string name="order_no">Order No :</string>
    <string name="date">Date</string>
    <string name="total_order_qty">Total Order Qty. :</string>
    <string name="view_details">View Details</string>
    <string name="subcategory_name">SubCategory Name :</string>
    <string name="width">Width :</string>
    <string name="total_quantity_meters">Total Quantity Meters :</string>
    <string name="order_status">Order Status :</string>
    <string name="price_details">Price details</string>
    <string name="cgst">CGST :</string>
    <string name="sgst">SGST :</string>
    <string name="igst">IGST :</string>
    <string name="invoice_no">Invoice No.</string>
    <string name="invoice_date">Invoice Date:</string>
    <string name="fabric_name">Fabric Name</string>
    <string name="qty_mtrs">Qty(Mtrs)</string>
    <string name="bill_details">Bill Details</string>
    <string name="total_taxable">Total Taxable</string>
    <string name="grand_total">Grand Total</string>
    <string name="invoice">Invoice</string>
    <string name="return_invoice">Return Invoice</string>
    <string name="pay_now">Pay Now</string>
    <string name="qty">QTY:</string>
    <string name="rs_250">RS 250</string>
    <string name="total_price">Total Price</string>
    <string name="total_quantity_pcs">Total Quantity(Pcs)</string>
    <string name="search">Search</string>
    <string name="want_to_exit">Are you sure</string>
    <string name="want_to_logout">Are you sure you want to Logout?</string>
    <string name="want_to_cancel">Are you sure you want to Cancel order?</string>
    <string name="no">No</string>
    <string name="are_u_sure">Are you sure</string>
    <string name="yes">Yes</string>
    <string name="balance_credit_days">Balance Credit Days :  </string>
    <string name="balance_credit_limit">Balance Credit Limit :  </string>
    <string name="mobile">Mobile Number</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_account_id">Enter Account Id</string>
    <string name="company_name">Company Name</string>
    <string name="owner_name">Owner Name</string>
    <string name="email">Email</string>
    <string name="something_wrong">Something Wrong!\nPlease Try again Later.</string>
    <string name="contact_admin">Please Contact Administrator.</string>
    <string name="added_cart">Added to cart</string>
    <string name="not_addedd_cart">Not added into cart.\nPlease try later</string>
    <string name="already_cart">Already in cart.</string>
    <string name="save_chnages">Save changes</string>
    <string name="address">Address</string>
    <string name="cancel">Cancel</string>
    <string name="edit_address_details">Edit Delivery Details</string>
    <string name="retry">RETRY</string>
    <string name="new_address">New Address</string>
    <string name="city_hint">City</string>
    <string name="state_hint">State</string>
    <string name="country_hint">Country</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="it_s_good_day_to_buy">Its good day to buy.</string>
    <string name="your_cart_is_empty">Your cart is empty!</string>
    <string name="confirm_password_tv">Confirm Password</string>
    <string name="forgot_password_yv">Forgot Password</string>
    <string name="no_notification_right_now">No Notification Right Now!!!</string>
    <string name="new_notification_will_be_shown_here">New notification will be shown here</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp_number">OTP Number</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password">Change Password</string>
    <string name="powered_by_interlink_consultant"><b>Powered by </b> Interlink Consultant</string>
    <string name="powered_by"><b>Powered by </b></string>
    <string name="interlink_consultant">Interlink Consultant</string>
    <string name="search_article">Search Article</string>
    <string name="todo">TODO</string>
    <string name="apply"><u>Apply</u></string>
    <string name="stop_scanning">Stop Scanning</string>
    <string name="design_number">Design No.</string>
    <string name="orderqty">QTY</string>
    <string name="rate">Rate</string>
    <string name="amount">Amount</string>
    <string name="note">Note</string>
    <string name="addtocart">Add to cart</string>
    <string name="order_summary">Order Summary</string>
    <string name="delivery_add">Delivery Address</string>
    <string name="your_order">Your Order</string>
    <string name="order_details">Order Details</string>
    <string name="order_amount">Order Amount</string>
    <string name="paymnet_cancel_hint">Cancel Payment</string>
    <string name="text_generated_file_error">Generated File is null or does not exist!</string>
    <string name="about_header">CLOUD 9 FASHION Offer a Comprehensive selection of fabrics!CLOUD 9 FASHION Offer a Comprehensive selection of fabrics!</string>
    <string name="about_content" tools:ignore="StringEscaping">
        \nCLOUD 9 FASHION its all about enticing fabrics that is
        now a part of common man life. Establish by a common man like you and ME, who understand the customers requirements and
        the day to day, Know how about this consumer and our product is our customers confidant and companion as they
        embark on their own journey to discover their unique identity and personal style. From the
        application selection of genuine product from across the globe, we are truly passionate to
        catering to your every need and comfort.So, please allow us to help you Buy More, Save More!!
</string>
    <string name="contact_header">Contact Us</string>
    <string name="contact_content">
        \n<b>LEGAL NAME:</b>\n
        CLOUD 9 FASHION\n
        \n<b>REGISTRATION NUMBER:</b>\n
        27AAIFC7360F1ZF\n
        \n<b>LOCATION:</b>\n
        G-10 PRASAD CHEMBER OPERA HOUSE, Mumbai, Mumbai City,\n
        Maharashtra 400004\n
        \n<b>EMAIL:</b>\n
        paragshah0802@gmail.com
</string>
    <string name="disclaimer_header">DISCLAIMER</string>
</resources>